--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -172,11 +172,29 @@
  
     - 모델이 다양한 입력과 출력의 불확실성을 고려해 평균적으로 가장 좋은 성능을 내도록 학습
 
+<br/>
 
+- **기댓값 성질**
 
+    - **선형성** : 기대값은 상수배/더하기를 해도 결과가 똑같이 반영한다
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/02-2장기댓값의성질선형성.png)
+     
+    - **상수의 기댓값** : 변하지 않는 숫자는 항상 그 값이 평균이다
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/02-2장기댓값의성질상수의기댓값.png)
 
+    - **독립일 때 곱의 기대값 분리**
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/02-2장기댓값의성질독립일때분리가능.png)
 
-
+    - **부등식 성질 (Jensen’s Inequality)** : 임의의 볼록 함수(Convex function) ∅에 대해 다음이 성립한
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/02-2장기댓값의성질볼록함수성질.png)
+     
+        - 예시는 아래와 같다
+     
+            - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/02-2장기댓값의성질볼록함수성질예시.png)
 
 
 
