--- a/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
+++ b/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
@@ -74,15 +74,41 @@
  
         - P(A ∩ B∣C) = P(A∣C)P(B∣C)
 
+<br/>
 
+### 4주차 
 
+- **임의 변수** : 무작위 실험의 결과를 숫자로 매핑(mapping)하는 규칙
 
+    - 이산 임의 변수 : 치역을 셀 수 있는 경우
 
+<br/>
 
+- **확률공간**
 
+    - **표본공간** : 무작위 실험의 가능한 모든 결과 **(Ω)**
+    
+    - **사건 공간** : 그 결과들로 정의된 사건들의 모음 **(𝓕)**, 우리가 다루고 싶은 사건 집합들
+   
+    - **확률 측도 P** : 각 사건에 확률을 배정하는 규칙 
 
+<br/>
 
+- **확률 질량 함수 (Probability Mass Function, PMF)**
 
+<br/>
+
+- **기댓값** : 분포의 중심을 표현
+
+    - 동일한 확률 실험을 **무한히 반복했을 때 평균적으로** 관찰되는 값
+
+- **분산 (Variance)** : 분포의 흩어짐 정도
+
+    - 임의 변수가 기댓값 근처에 얼마나 밀집 또는 퍼져 있는지를 측정
+
+- **무의식적 통계학자의 법칙 (LOTUS)** : 기댓값을 계산할 때 k x P(k)에서 g(k) x P(k)가 되는 것
+
+- **지시 변수 (Indicator Random Variable)** : 경우의 수가 2개일 때 공식을 쉽게 풀이 가능 
 
 
 
