--- a/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
+++ b/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
@@ -110,9 +110,60 @@
 
 - **지시 변수 (Indicator Random Variable)** : 경우의 수가 2개일 때 공식을 쉽게 풀이 가능 
 
+- **독립 변수 (Independent Random Variables)** : 임의변수 X, Y가 독립 -> 변수 X의 값이 다른 변수 Y의 값에 아무 영향을 주지 않는다
+
+    - 독립은 X⊥Y로 표기
+ 
+    - X와 Y가 **독립일 때** 두 값의 분산은 **각각의 분산을 더한 것과 같다**
+
+- **확률 분포 (Probability distribution)** : 임의 변수가 가질 수 있는 값들에 대해 각 값이 얼마나 자주 일어날 지를 설명하는 규칙
+
+- 주요 이산 확룰 분포는 아래와 같다
+
+    - **베르누이 분포 (Bernoulli Distribution)**
+
+        - 한 번의 시행 → 성공/실패 두 가지 결과만 있음
+
+        - 모수: 성공확률 p
+
+    - **이항 분포 (Binomial Distribution)**
+
+        - 동일한 베르누이 시행을 n번 반복했을 때 성공 횟수
+
+        - 모수: 시행 횟수 n, 성공확률 p
+
+    - **기하 분포 (Geometric Distribution)**
+
+        - 첫 번째 성공이 나올 때까지 걸린 시행 횟수
+
+        - 모수: 성공확률 p
+
+    - **음이항 분포 (Negative Binomial Distribution)**
+
+        - r번째 성공이 나올 때까지 걸린 시행 횟수
+
+        - 모수: 성공횟수 r, 성공확률 p
+
+    - **초기하 분포 (Hypergeometric Distribution)**
+
+        - 모집단에서 복원 없이 추출했을 때 성공 개수
+
+        - 모수: 모집단 크기 N, 성공 항목 수 K, 추출 개수 n
+
+    - **포아송 분포 (Poisson Distribution)**
+
+        - 단위 시간/공간 안에 사건 발생 횟수
+
+        - 모수: 평균 발생률 lambda
+
+    - **이산 균등 분포 (Discrete Uniform Distribution)**
+
+        - 유한한 이산 집합에서 모든 값이 동일한 확률로 발생
+
+        - 모수: 최소값 a, 최대값 b
 
 
-
+ 
 
 
 
