--- a/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
+++ b/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
@@ -125,42 +125,70 @@
         - 한 번의 시행 → 성공/실패 두 가지 결과만 있음
 
         - 모수: 성공확률 p
+     
+        - 기댓값 : E[X] = p
+     
+        - 분산 : p * (1 - p)
 
     - **이항 분포 (Binomial Distribution)**
 
         - 동일한 베르누이 시행을 n번 반복했을 때 성공 횟수
 
         - 모수: 시행 횟수 n, 성공확률 p
+     
+        - 기댓값 : n * p
+     
+        - 분산 : n * p * (1 - p)
 
     - **기하 분포 (Geometric Distribution)**
 
         - 첫 번째 성공이 나올 때까지 걸린 시행 횟수
 
         - 모수: 성공확률 p
+     
+        - 기댓값 : 1 / p
+     
+        - 분산 : (1 - p) / (p^2)
 
     - **음이항 분포 (Negative Binomial Distribution)**
 
         - r번째 성공이 나올 때까지 걸린 시행 횟수
 
         - 모수: 성공횟수 r, 성공확률 p
+     
+        - 기댓값 : r / p
+     
+        - 분산 : r * (1 - p) / (p^2)
 
     - **초기하 분포 (Hypergeometric Distribution)**
 
         - 모집단에서 복원 없이 추출했을 때 성공 개수
 
         - 모수: 모집단 크기 N, 성공 항목 수 K, 추출 개수 n
+     
+        - 기댓값 : n * (K / N)
+     
+        - 분산 : n * (K / N) * (1 - K / N) * ((N - n) / (N - 1))
 
     - **포아송 분포 (Poisson Distribution)**
 
         - 단위 시간/공간 안에 사건 발생 횟수
 
         - 모수: 평균 발생률 lambda
+     
+        - 기댓값 : λ
+     
+        - 분산 : λ
 
     - **이산 균등 분포 (Discrete Uniform Distribution)**
 
         - 유한한 이산 집합에서 모든 값이 동일한 확률로 발생
 
         - 모수: 최소값 a, 최대값 b
+     
+        - 기댓값 : (a + b) / 2
+     
+        - 분산 : ((b - a + 1)^2 - 1) / 12
 
 
  
