--- a/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
+++ b/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
@@ -148,6 +148,8 @@
      
         - 기댓값 : 1 / p
      
+            - ex: 주사위 던지기에서 앞면이 나올려면 평균 2번은 던져야 앞면이 처음 나옴  
+     
         - 분산 : (1 - p) / (p^2)
 
     - **음이항 분포 (Negative Binomial Distribution)**
