--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -1,3 +1,13 @@
+- 04-1장의 핵심
+
+    - 훈련 성능과 테스트 성능의 차이 파악
+ 
+    - 훈련 데이터를 완벽히 맞추는 모델이 왜 새로운 데이터에서는 종종 실패하는지
+ 
+    - 바이어스-분산 절충과 그 의미
+
+<br/>
+
 ### 성능 평가(Performance Assessment) 가 필요한 이유 
 
 - **The Fundamental Problem (근본적인 문제)**
@@ -6,6 +16,38 @@
  
         - 즉, 모델이 처음 보는 데이터에 대해 잘 작동하는지 알 수 없음 
 
+        - 예시 : 훈련 데이터를 완벽히 외운 모델(정확도 100%) 일지라도 새로운 데이터에서는 성능이 50% 가까 떨어질 수 있다 (overfitting)
+
+            - 이 차이는 올바른 성능 평가의 필요성을 보여준다
+ 
 <br/>
 
-- 예시 : 
+- 통계적 학습 방법의 성능을 평가하기 위해서는, **모델의 예측이 실제 관측된 데이터와 얼마나 잘 맞는지**를 측정할 방법이 필요하다
+
+    - 따라서, 주어진 관측치에 대해 예측된 응답값이 실제 응답값과 얼마나 가까운지를 **수치**로 나타낼 필요가 있다 
+
+<br/>
+
+### Training Error
+
+- **mean squared error (MSE,평균 제곱 오차)**
+
+    - 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
