--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -90,6 +90,160 @@
 
 - **핵심 정리** : 우리는 훈련 MSE가 가장 낮은 모델이 아니라, **테스트 MSE가 가장 낮은 모델**을 선택해야 한다
 
+<br/>
+
+### Classification Performance Metrics (분류 성능 지표)
+
+- **Training Error Rate**
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분류성능지표공식자료.png)
+ 
+    - 훈련 오류율 : n개의 훈련 데이터에서 **실제 정답 y_i와 예측값 y_i_hat 다른 비율**
+ 
+    - 여기서 I(⋅)는 지시 함수 → 조건이 참이면 1, 거짓이면 0.
+
+<br/>
+
+- **Test error rate**
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분류성능지표테스트에러공식자료1.png)
+ 
+    - 해당 공식은 유한한 테스트 샘플에서 구한 표본 **평균 오류율**이고 아래 공식은 모집단 전체 분포에서 정의된 **이론적 기대 오류율**
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분류성능지표테스트에러공식자료2.png)
+
+<br/>
+
+### 모델 선택의 어려움
+
+- **이상적인 상황** : **테스트 데이터**가 존재할 때
+
+    - (1) : 단순히 각 후보 모델을 테스트 데이터로 평가
+ 
+    - (2) : 테스트 MSE(또는 오류율)가 가장 낮은 모델을 선택
+ 
+    - (3) : 이것은 일반화 성능에 대한 직접적인 근거를 줌
+ 
+<br/>
+
+- **현실적인 상황**: 모델 선택 과정에서 테스트 데이터는 없다
+
+    - 유혹적이지만 **잘못된 접근** : 훈련 MSE가 가장 낮은 모델을 고르자
+ 
+        - -> **실패한다** : 훈련 MSE는 매우 작을 수 있지만, 테스트 MSE는 훨씬 커질 때가 많다
+
+<br/>
+
+### Model flexibility and fits (모델의 유연성과 적합)
+
+- ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장모델유연성자료1.png)
+
+    - 데이터 점(동그라미)이 주어져 있고
+
+    - 세 가지 모델이 데이터를 학습한 결과 곡선으로 나타남
+
+        - 주황색 직선: 단순한 모델 (자유도 낮음, underfitting 경향)
+
+        - 파란색 곡선: 적당히 유연한 모델 (적절한 복잡도, 좋은 일반화)
+
+        - 초록색 곡선: 지나치게 복잡한 모델 (자유도 높음, overfitting 경향)
+
+    - 위 그래프로 모델의 복잡도를 표현해보자
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장모델복잡도그래프자료1.png)
+     
+        - 가로축: 모델의 복잡도(flexibility, df)
+
+        - 세로축: 평균 제곱 오차(MSE)
+
+        - 곡선 두 개:
+
+            - 회색: 훈련 MSE → 복잡도가 커질수록 계속 줄어든다
+
+            - 빨간색: 테스트 MSE → 처음엔 줄다가, 일정 수준 이상 복잡해지면 다시 커진다 (과적합)
+         
+        - 주황색, 파란색, 초록색 네모 칸은 MSE 값을 나타낸다
+     
+            - 주황색 직선 모델: 단순 → 테스트 MSE가 높음 (과소적합).
+
+            - 파란색 곡선 모델: 적당한 유연성 → 테스트 MSE가 가장 낮음 (최적).
+
+            - 초록색 복잡한 모델: 과하게 유연 → 테스트 MSE가 다시 커짐 (과적합).        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
