--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -139,6 +139,8 @@
 - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장모델유연성자료1.png)
 
     - 데이터 점(동그라미)이 주어져 있고
+ 
+    - 검은색 곡선 : 데이터가 실제로 따라야 하는 “진짜 패턴”
 
     - 세 가지 모델이 데이터를 학습한 결과 곡선으로 나타남
 
@@ -162,15 +164,17 @@
 
             - 빨간색: 테스트 MSE → 처음엔 줄다가, 일정 수준 이상 복잡해지면 다시 커진다 (과적합)
          
-        - 주황색, 파란색, 초록색 네모 칸은 MSE 값을 나타낸다
+        - 주황색, 파란색, 초록색 네모 칸은 해당 모델의 복잡도에서의 MSE 위치이다 
      
-            - 주황색 직선 모델: 단순 → 테스트 MSE가 높음 (과소적합).
+            - 주황색 직선 모델: 단순 → 테스트 MSE가 높음 (과소적합)
 
-            - 파란색 곡선 모델: 적당한 유연성 → 테스트 MSE가 가장 낮음 (최적).
+            - 파란색 곡선 모델: 적당한 유연성 → 테스트 MSE가 가장 낮음 (최적)
 
-            - 초록색 복잡한 모델: 과하게 유연 → 테스트 MSE가 다시 커짐 (과적합).        
+            - 초록색 복잡한 모델: 과하게 유연 → 테스트 MSE가 다시 커짐 (과적합)     
 
+<br/>
 
+- **선형회귀보다 곡선이 더 유연성이 뛰어남** -> 복잡한 모델을 더 잘 표현할 수 있음
 
 
 
