--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -174,12 +174,44 @@
 
 <br/>
 
-- **선형회귀보다 곡선이 더 유연성이 뛰어남** -> 복잡한 모델을 더 잘 표현할 수 있음
+- **위 그래프 정리**
+  
+    - **선형회귀보다 곡선이 더 유연성이 뛰어남** -> 복잡한 모델을 더 잘 표현할 수 있음
+ 
+    - 모델의 **유연성이 증가**할수록, 곡선이 관측된 데이터(점)와 **더 가깝게** 맞춰진다
+ 
+    - 초록색 곡선은 가장 유연하여 데이터를 매우 잘 맞춘다. 하지만 실제 함수 f(검은 곡선)와는 잘 맞지 않는데, 그 이유는 너무 요동(진동)이 심하기 때문 -> **과적합 상황**
+ 
+    - 유연성 수준을 조절함으로써, 이 데이터에 대해 여러 가지 다른 적합 결과를 얻을 수 있다
+ 
+        - 즉 아래와 같이 실제 함수가 선형에 가깝다면, 복잡한 모델을 사용할 필요 없이 단순한 선형 회귀 모델이 더 도움이 된다
+     
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장선형회귀모델이더적합한경우그래프예시.png)
+
+<br/>
+
+### Bias & Variance
+
+- 예측 오류를 바이어스, 분산으로 나눠서 이해해보자
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개.png)
+
+<br/>
 
 
+- **공식 증명 과정**
 
-
-
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개1.png)
+ 
+    - 위 기댓값 내부 전개 과정은 아래와 같다
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개2.png)
+ 
+    - 위 공식에서 2E[ϵf(x0)-f_hat(x0)]가 사라지는 이유는 잡음 ϵ의 평균은 0이고 E[ϵ]=0 이므로 해당 항 내부가 0이 되어 사라지는 것이다
+ 
+    - 또한 분산 공식을 적용하면 아래와 같다
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개3.png)
 
 
 
