--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -211,9 +211,19 @@
  
     - 또한 분산 공식을 적용하면 아래와 같다
  
-    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개3.png)
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개3.png)
+     
+        - ε의 평균이 0이라는 것은 -2,-1,1,2 와 같이 다 더해서 평균적으로 0이라는 것이고 ε 제곱은 양수이므로 헷갈리지 않게 조심해야한다 
+     
+        - 따라서 잡음 기호인 잡음 ε에 대한 σ 제곱은 Var(ε)와 동일하다 
 
-
+    - 현재까지 완료된 공식을 보면 아래와 같다
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개4.png)
+     
+        - 위 공식에서 앞에 제곱으로 이루어진 기댓값을 전개하기 위해 아래 공식을 사용하자
+     
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개5.png) 
 
 
 
