--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -223,9 +223,15 @@
      
         - 위 공식에서 앞에 제곱으로 이루어진 기댓값을 전개하기 위해 아래 공식을 사용하자
      
-        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개5.png) 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개5.png)
+     
+        - 여기서 Z = f_hat(x0), c = f(x0)로 두면 아래 공식이 성립한다
+     
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개6.png)
 
-
+    - 따라서 최종적으로 아래 공식이 성립한다
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값최종공식전개.png)
 
 
 
