--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -207,7 +207,7 @@
  
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개2.png)
  
-    - 위 공식에서 2E[ϵf(x0)-f_hat(x0)]가 사라지는 이유는 잡음 ϵ의 평균은 0이고 E[ϵ]=0 이므로 해당 항 내부가 0이 되어 사라지는 것이다
+    - 위 공식에서 2E[ϵf(x0)-f_hat(x0)]가 사라지는 이유는 우선 통계학/머신러닝 기본 가정은 잡음 ϵ는 입력 X와 및 모델 추정치 f_hat(x)와 독립이고, ϵ의 평균은 0이고, E[ϵ]=0 이므로 해당 항 내부가 0이 되어 사라지는 것이다
  
     - 또한 분산 공식을 적용하면 아래와 같다
  
