--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -195,6 +195,8 @@
 - 예측 오류를 바이어스, 분산으로 나눠서 이해해보자
 
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개.png)
+ 
+    - 예측오차 = 줄일 수 없는 잡음 + 모델의 단순함(편향) + 데이터 민감성(분산)
 
 <br/>
 
