--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -197,7 +197,13 @@
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값공식전개.png)
  
     - 예측오차 = 줄일 수 없는 잡음 + 모델의 단순함(편향) + 데이터 민감성(분산)
-
+ 
+        - 첫 번째 항은 **분산**으로, 모델이 학습 데이터에 따라 얼마나 흔들리는지를 나타낸다.
+     
+        - 두 번째 항은 **편향 제곱**으로, 예측값의 평균이 실제 함수 f(x0)와 얼마나 다른지를 의미한다
+     
+        - 마지막 항은 **잡음**으로, f(x0) 주변의 데이터의 자연스러운 분산이며, σε² = 0이 아닌 한 피할 수 없다
+     
 <br/>
 
 
