--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -241,7 +241,37 @@
  
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장분산편향기댓값최종공식전개.png)
 
+<br/>
 
+### bias–variance dilemma (편향–분산 딜레마)
+
+- **편향과 분산를 동시에 줄이려고** 할 때 생기는 **충돌**을 의미하며, 이는 학습된 알고리즘이 훈련 데이터 외의 **새로운 데이터에 일반화되는 것을 방해**한다
+
+    - **Bias ↓** → 모델을 복잡하게 해야 함. 하지만 그러면 Variance ↑ (데이터에 따라 흔들림 심해짐).
+
+    - **Variance ↓** → 모델을 단순하게 해야 함. 하지만 그러면 Bias ↑ (진짜 패턴을 놓침)
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장편향분산딜레마이해를위한자료사진첨부.png)
+ 
+        - **단순한 모델** : 편향이 크고, 분산은 작다 
+     
+            - **언더피팅 (Bias ↑, Variance ↓)** : 높은 편향은 알고리즘이 입력 특성과 출력 사이의 중요한 관계를 놓치게 만들 수 있다
+         
+                - 모델이 너무 단순하면 실제 패턴을 제대로 못 잡는다
+             
+                - ex: 직선 모델로 곡선 데이터를 설명하려고 하면 항상 엇나가게 된다
+     
+        - **복잡한 모델** : 편향은 작지만, 분산이 크다 
+     
+            - **오버피팅 (Bias ↓, Variance ↑)** : 높은 분산은 알고리즘이 훈련 데이터 속 무작위 잡음까지 모델링해버릴 때 발생할 수 있다
+         
+                - 모델이 너무 복잡하면 데이터의 우연한 잡음까지 외워버린다
+             
+                - 훈련 데이터는 잘 맞추지만 새로운 데이터에서는 크게 틀린다
+     
+        - 최적의 모델 복잡도는 **두 가지 오류(Bias와 Variance)의 균형**을 맞춘다
+     
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장편향분산딜레마이해를위한자료사진첨부.png)
 
 
 
