--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -271,9 +271,15 @@
      
         - 최적의 모델 복잡도는 **두 가지 오류(Bias와 Variance)의 균형**을 맞춘다
      
-        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장편향분산딜레마이해를위한자료사진첨부.png)
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장편향분산딜레마이해를위한그래프자료첨부.png)
 
+<br/>
 
+- **정리하면**
+
+    - **편향** : 정답에서 빗나감의 정도
+ 
+    - **분산** : 퍼져 있는 정도 
 
 
 
