--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -1,4 +1,4 @@
-- 04-1장의 핵심
+<img width="472" height="297" alt="image" src="https://github.com/user-attachments/assets/6bd4ec49-fd95-49cd-8eec-1d205581ee9a" />- 04-1장의 핵심
 
     - 훈련 성능과 테스트 성능의 차이 파악
  
@@ -281,10 +281,43 @@
  
     - **분산** : 퍼져 있는 정도 
 
+<br/>
+
+### Bias–variance tradeoff 
+
+- 아래 실험을 함께 보자 
+
+- 80개의 관측치와 20개의 예측 변수들을, [0,1]^20 구간의 초입방체(hypercube)에 균일하게 분포시켰다
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장편향분산트레이드오프그래프비교사진.png)
+ 
+    - 시뮬레이션 예제에서 예상 **예측 오차**(주황색), **편향 제곱**(초록색), **분산**(파란색)을 나타낸 것이다
+ 
+    - 또한, 크기가 p인 최적 부분집합 회귀(best subset regression)를 사용했다
+ 
+        - 모든 변수를 다 쓰지 않고, p개만 골라서 모델을 만든다는 의
+ 
+    - bias–variance 트레이드오프는 0–1 손실(분류)과 제곱오차 손실(회귀)에서 다르게 나타난다
+ 
+        - **회귀(regression)**: 오차는 보통 제곱오차로 측정
+
+        - **분류(classification)**: 오차는 0–1 손실(맞으면 0, 틀리면 1)로 측정
+
+    <br/>
+    
+    - 위 실험을 통해 알 수 있는 점은
+ 
+        - 회귀나 분류나 모두 편향과 분산이 같은 관계성을 가진다
+     
+            - 편향이 커지면 분산이 줄어들고, 편향이 작아지면, 분산이 늘어남  
 
 
+        - 하지만 **예측 오차 (Prediction Error) 는손실 함수에 따라 달라진다**
+     
+            - 분류에서 쓰는 0–1 손실 함수는 맞으면 0, 틀리면 1로만 평가하기 때문에,
+작은 확률 차이도 곧바로 정답/오답으로 바뀌어 **오차율이 크게 변한다**
 
-
+            - 반면 회귀의 제곱오차 손실은 예측이 조금 틀려도 거리만큼 **점진적으로 오차가 증가하기 때문에** 곡선이 **완만**하다
 
 
 
