--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -319,11 +319,62 @@
 
             - 반면 회귀의 제곱오차 손실은 예측이 조금 틀려도 거리만큼 **점진적으로 오차가 증가하기 때문에** 곡선이 **완만**하다
 
+<br/>
 
+### 편향, 분산, mse 관계성 
 
+- ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장편향분산mse관계성을표현하는그래프사진자료.png)
 
+    - 왼쪽 함수부터 실제 함수 𝑓가 각각 비선형, 선형에 가까움, 매우 비선형일 때의 편향(Bias²), 분산(Variance), 그리고 테스트 MSE의 관계 변화를 보여준다
 
+    - 파란색 (Bias²)
 
+        - 모델이 단순해서 “진짜 함수”와 평균적으로 얼마나 빗나가는지
+
+        - 모델 복잡도가 커질수록 (flexibility ↑) → Bias²는 줄어듦
+
+    - 주황색 (Variance)
+
+        - 모델이 데이터셋마다 얼마나 흔들리는지 (일관성 문제)
+          
+        - 모델 복잡도가 커질수록 → Variance는 커짐
+
+    - 빨간색 (Test MSE)
+
+        - 실제 우리가 중요하게 보는 최종 예측 오차
+
+        - Bias² + Variance + 노이즈가 합쳐진 값
+
+        - 보통 U자형 곡선 → 중간 지점에서 최소값
+     
+<br/>
+
+- 세 경우 모두, 모델의 유연성이 커질수록 분산은 증가하고 편향은 감소한다
+
+    - 하지만 최적의 **테스트 MSE에 해당하는 유연성 수준**은 세 데이터셋마다 **크게 다르다**
+        
+        - 그 이유는 각 데이터셋에서 편향 제곱과 분산이 **변하는 속도**가 다르기 때문이다
+
+    <br/>
+    
+    - 왼쪽 그림 (비선형 데이터) : 편향이 처음에 급격히 줄어들어서 예상 **테스트 MSE도 빠르게 감소**한다
+ 
+    - 가운데 그림 (거의 선형 데이터) : 실제 함수 f가 **거의 선형**이기 때문에 **유연성이 커져도 편향 감소는 작다**. 그래서 테스트 MSE는 조금만 줄다가, 분산이 급격히 커지면서 **오히려 증가**한다
+ 
+    - 오른쪽 그림 (매우 비선형 데이터) : 실제 함수 f가 매우 비선형이기 때문에, 유연성이 커질수록 편향이 극적으로 줄어든다
+ 
+        - 또한, **유연성이 커져도 분산은 거의 증가하지 않는다**
+     
+        - 따라서 테스트 MSE는 모델이 복잡해질수록 크게 줄어들다가, **나중에 약간만 증가**한다
+<br/>
+
+- **정리하면**
+
+    - **비선형 데이터** : 단순 모델은 성능이 나쁘지만, 조금만 복잡하게 하면 성능 급격히 좋아짐.
+
+    - **거의 선형에 가까운 데이터** : 단순 모델도 충분히 잘 맞음. 너무 복잡하면 분산 때문에 오히려 나빠짐
+
+    - **매우 비선형 데이터** : 복잡할수록 편향이 크게 줄고 분산 증가도 적어서 성능이 꾸준히 좋아짐
 
 
 
