--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -279,7 +279,11 @@
 
     - **편향** : 정답에서 빗나감의 정도
  
-    - **분산** : 퍼져 있는 정도 
+        - ex: 편향이 높다 -> 화살이 과녁 중심에서 멀리 떨어져 있지만, 한쪽에 뭉쳐 있음
+ 
+    - **분산** : 퍼져 있는 정도
+ 
+        - ex: 분산이 높다 -> 화살이 중심 근처에도 있지만 사방으로 흩어져 있음 
 
 <br/>
 
