--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -280,10 +280,14 @@
     - **편향** : 정답에서 빗나감의 정도
  
         - ex: 편향이 높다 -> 화살이 과녁 중심에서 멀리 떨어져 있지만, 한쪽에 뭉쳐 있음
+     
+        - 모델이 단순해서 실제 패턴을 잘 못 잡을 때 생기는 “빗나감의 정도” (정확성 문제)
  
     - **분산** : 퍼져 있는 정도
  
-        - ex: 분산이 높다 -> 화살이 중심 근처에도 있지만 사방으로 흩어져 있음 
+        - ex: 분산이 높다 -> 화살이 중심 근처에도 있지만 사방으로 흩어져 있음
+     
+        - 모델이 복잡해서 데이터가 바뀔 때마다 결과가 들쭉날쭉하는 “흩어짐의 정도” (일관성 문제)
 
 <br/>
 
