--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -384,7 +384,17 @@
 
     - **매우 비선형 데이터** : 복잡할수록 편향이 크게 줄고 분산 증가도 적어서 성능이 꾸준히 좋아짐
 
+<br/>
 
+### The generalization performance (일반화 성능)
+
+- 학습 방법의 일반화 성능은 **독립된 테스트 데이터에서 얼마나 잘 예측하는가**와 관련된다
+
+    - 즉 , 처음 보는 새로운 데이터에서도 잘 맞아야 좋은 모델임
+ 
+    - 어떤 학습 방법이나 모델을 선택할지 결정하는 데 지침이 되기 때문 매우 중요함 
+
+<br/>
 
 
 
