--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -396,18 +396,53 @@
 
 <br/>
 
+### 편향 분산과 모델 복잡도의 관계성
 
+- ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장편향분산과모모델복잡도의관계성그래프자료.png)
 
+    - 가로축 (Model Complexity, df) = 모델 복잡도
+ 
+        - 왼쪽에서 오른쪽으로 갈 수록 모델 복잡도에 따른 오차값을 보여주고 있음  
 
+        - 왼쪽: 단순 모델 (직선, 파라미터 적음)
 
+        - 가운데: 적당한 복잡도
 
+        - 오른쪽: 매우 복잡한 모델 (파라미터 많음, 훈련데이터에 완전히 맞춤)
+  
+    - 파란선 (Training Error): 훈련 데이터에서의 오차
 
+    - 빨간선 (Test Error): 새로운 데이터에서의 오차 
 
+<br/>
 
+- 즉, **모델 복잡도가 증가**하면 **Training Error는 계속 줄지만**, **Test Error는 줄다가 다시 늘어난다**. → 따라서 일반화 성능을 위해서는 Bias와 Variance 사이에서 **적절한 복잡도**를 선택해야 한다
 
+<br/>
 
+### Tuning parameter
 
+- 보통 모델에는 하나 이상의 **튜닝 파라미터(α)** 가 있으며, 예측식을 아래와 같이 표현할 수 있다
 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-1장튜닝파라미터간단한공식.png)
+ 
+        - 식을 쓸 때 매번 α 를 사용하지 않고, f_hat(x)라고 적는 경우가 많다 
+ 
+    - 튜닝 파라미터는 **모델의 복잡도를 변화**시키며, 우리는 ***오차를 최소화하는 α 값**을 찾고 싶다
+    
+        - 즉, **평균 테스트 오차 곡선을 최소로 만드는 값**을 찾는 것이다
+
+    <br/>
+    
+    - 우리가 염두에 두는 목표는 사실 두 가지로 나뉜다는 점을 아는 게 중요하다
+ 
+        - **(1) 모델 선택** : 여러 모델의 성능을 추정해서 가장 좋은 모델을 고르는 것
+     
+            - 즉, 여러 α 값(혹은 여러 모델 후보) 중에서 어떤 걸 쓸지 정하는 과정 
+
+        - **(2) 모델 평가** : 최종 모델을 선택한 후, 새로운 데이터에서 그 모델의 예측오차를 추정하는 것
+     
+            - 최종적으로 선택한 모델이 실제로 얼마나 잘 작동하는지 확인하는 단계 
 
 
 
