--- a/Artificial Neural Network/Artificial Neural Network study/04-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-2장.md
@@ -30,11 +30,23 @@
  
     - 이렇게 얻은 k개의 테스트 오차를 평균낸다
  
-        - 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/04-2장k-flod테스트오차평균.png)
+     
+        - k개의 테스트 오차(MSE)를 평균내어 최종 점수로 삼는다
 
+<br/>
 
+- **k-fold 장점**
 
+    - 모든 데이터를 학습과 검증에 **모두 활용**
+ 
+        - 데이터 낭비가 없고, 작은 데이터셋에서도 효율적
 
+    - 한 번만 나눠서 검증하는 방법보다 **더 안정적인 추정치**를 준다
+ 
+    - 데이터 분할에 대한 의존성을 줄인다
+ 
+        - 특정 Train/Test 분할에 따라 결과가 크게 달라지는 문제를 완화한다 
 
 
 
