--- a/Artificial Neural Network/Artificial Neural Network study/04-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-2장.md
@@ -48,6 +48,29 @@
  
         - 특정 Train/Test 분할에 따라 결과가 크게 달라지는 문제를 완화한다 
 
+<br/>
+
+### Leave-One-Out Cross-Validation (LOOCV)
+
+- **데이터를 하나씩 빼서(test)**, **나머지로 학습(train)** 하는 교차검증 방식
+
+    - 검증 세트(validation set)를 두지 않고, 각 데이터가 번갈아 가며 테스트 역할을 함
+
+    - **작은 데이터셋에 효과적**이고 적합하다
+ 
+        - 데이터가 너무 적으니까 Train/Validation/Test로 잘라버리면 학습할 데이터가 **부족해짐**
+     
+        - 그래서 Validation 세트를 따로 두지 않고 → 각 데이터가 한 번씩 Test 역할을 하도록 함
+     
+        - 즉, n개의 데이터 중 n-1개는 Train, 1개는 Test로 쓰고, 이걸 n번 반복해서 평균낸다
+ 
+    - 특수한 경우: k = n
+ 
+        - n-1개의 데이터로 학습하고, 남은 1개로 테스트한다
+     
+        - 이 과정을 모든 n개의 데이터에 대해 반복
+
+<br/>
 
 
 
