--- a/Artificial Neural Network/Artificial Neural Network study/04-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-2장.md
@@ -72,9 +72,13 @@
 
 <br/>
 
+### 정규화 (Why Regularization)
 
+- **정규화가 필요한 이유**
 
-
+    - **(1) : The High-Dimensional Problem (고차원 문제)**
+ 
+        - 변수가 개수(p)가 관측치 개수(n)와 비슷하거나 더 많을 때 
 
 
 
