--- a/Artificial Neural Network/Artificial Neural Network study/04-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-2장.md
@@ -76,22 +76,47 @@
 
 - **정규화가 필요한 이유**
 
-    - **(1) : The High-Dimensional Problem (고차원 문제)**
+    - **The High-Dimensional Problem (고차원 문제)**
  
-        - 변수가 개수(p)가 관측치 개수(n)와 비슷하거나 더 많을 때 
+        - 변수가 개수(p)가 관측치 개수(n)와 비슷하거나 더 많을 때 (ex: 100개의 샘플에 변수가 100개 이상 존재할)
+     
+        - **최소제곱법(Least squares) 분산**이 매우 커진다
+     
+            - 데이터 샘플이 조금만 바뀌어도 예측 결과가 크게 달라짐 → 불안정 
 
+        - 모델이 **과적합**되기 쉽다
+     
+        - 변수가 관측치보다 많으면 **해가 무한히 많아질 수 있다**
+     
+            - 방정식보다 미지수가 많으니, 회귀 계수 조합이 무한하게 존재 → 답이 하나로 정해지지 않음
 
+   <br/>
+   
+    - **따라서 정규화가 필요하다**
+ 
+        - 모델 복잡성에 **패널티**를 추가함
+     
+            -  즉, 변수가 많아져도 아무렇게나 커지지 못하도록 제약을 건다
 
+        - **회귀 계수를 0에 가깝게** 줄인다
+     
+            - 불필요한 변수를 억제하고 단순화 
 
+        - **분산**을 크게 줄이는 대신, **편향**을 약간 늘린다
+     
+            - 약간의 단순화(오차 허용)를 통해 모델 안정성을 높이고 과적합을 막는다
 
+<br/>
 
+- 해당 파트에서 정규화는 고차원 문제 해결으로 제시되며 대표적으로 아래 방법이 존재한다
 
+    - Ridge: 모든 계수를 줄임(0은 아님)
 
+    - Lasso: 일부 계수를 0으로 만들어 변수 선택 가능
 
-
-
-
-
+    - Dimension Reduction: 차원을 줄여 단순화
+    
+    - Subset Selection: 일부 변수만 선택 
 
 
 
