--- a/Artificial Neural Network/Artificial Neural Network study/04-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-2장.md
@@ -118,10 +118,35 @@
     
     - Subset Selection: 일부 변수만 선택 
 
+<br/>
+
+### Shrinkage method
+
+- **Shrinkage method** : **계수를 줄여서** 과적합을 막는 정규화 기법
+
+    - 모든 변수 p를 포함하는 모델을 적합할 수 있는데, 이때 계수 추정치를 제약(constrain)하거나 정규화(regularize)하는 기법을 사용한다.
+
+        - 즉, 계수들을 0에 가깝게 줄이는(shrink) 방법을 의미한다
+ 
+    - 계수 추정치를 줄이면 그 분산을 크게 감소시킬 수 있음이 밝혀졌다
+ 
+    - 회귀 계수를 **0에 가깝게** 줄이는 가장 잘 알려진 두 가지 기법은 **릿지 회귀(Ridge Regression)** 와 **라쏘 회귀(Lasso)** 이다
+ 
+        - Ridge: 모든 계수를 줄임 (0은 아님)
+
+        - Lasso: 일부 계수를 아예 0으로 만들어 변수 선택까지 가능 
+ 
 
 
+<br/>
 
+- **Subset Selection**
 
+    - 변수들 중 일부만 선택해서 나머지는 ***완전히 버리는** 방법 
+
+        - 모델이 단순해지고 해석이 쉬움
+
+        - 하지만 선택 과정이 불안정할 수 있음 (데이터 조금만 바뀌어도 선택된 변수가 달라짐) 
 
 
 
